# models/cars.js
@@ -1,16 +1,0 @@
-const express = require('express');
-const router = express.Router();
-
-const carsController = require('../controllers/cars');
-
-router.get('/', carsController.getAllCar);
-
-router.get('/:id', carsController.getSingleCar);
-
-router.post('/', carsController.createCar);
-
-router.put('/:id', carsController.updateCar);
-
-router.delete('/', carsController.deleteCar);
-
-module.exports = router;
